--- a/src/app/protected/cephalix/institutes/lists/institutes-status.component.html
+++ b/src/app/protected/cephalix/institutes/lists/institutes-status.component.html
@@ -37,7 +37,10 @@
         id="agGridTable" style="width: 100%; height: 100%;" class="{{authService.settings.agGridThema}}"
         rowSelection="multiple" rowHeight="{{authService.settings.rowHeight}}" [context]="context" [rowData]="rowData"
         [columnDefs]="columnDefs" [defaultColDef]="defaultColDef" headerHeight="150"
-        [rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick" (gridReady)="onGridReady($event)">
+        [rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick" 
+        (firstDataRendered)="headerHeightSetter($event)"
+        (columnResized)="headerHeightSetter($event)"
+        (gridReady)="onGridReady($event)">
       </ag-grid-angular>
     </ion-card-content>
   </ion-card>
