--- a/src/app/protected/edu/lessons/tabs/room-control/room-control.component.html
+++ b/src/app/protected/edu/lessons/tabs/room-control/room-control.component.html
@@ -40,11 +40,35 @@
       <ion-buttons slot="end">
         <ion-item matTooltip="{{'Select the room to control' | translate}}">
           <ion-label *ngIf="rooms" position="stacked">{{'Select a room' | translate}}</ion-label>
-          <ion-select [(ngModel)]="selectedRoomId" #roomSelect (ionChange)="selectChanged($event)" okText="OK"
+          <ion-selectable
+          #roomSelect
+          [(ngModel)]="selectedRoom"
+          [ngModelOptions]="{standalone: true}"
+          [items]="rooms"
+          itemValueField="id"
+          itemTextField="name"
+          [canSearch]="true">
+          <ng-template ionicSelectableHeaderTemplate>
+            <ion-toolbar>
+              <ion-title>
+              {{ "Select a Room" | translate }}
+              </ion-title>
+              <ion-buttons slot="end">
+                <ion-button ion-button (click)="roomSelect.close()">
+                  <ion-icon color="danger" name="close"></ion-icon>
+                </ion-button>
+              </ion-buttons>
+            </ion-toolbar>
+          </ng-template>
+          <ng-template ionicSelectableItemIconTemplate>
+            <div></div>
+          </ng-template>
+          </ion-selectable>
+          <!-- ion-select [(ngModel)]="selectedRoomId" #roomSelect (ionChange)="selectChanged($event)" okText="OK"
             cancelText="{{ 'Cancel' | translate}}">
             <ion-select-option value="{{room.id}}" *ngFor="let room of rooms | async">{{room.name}}
             </ion-select-option>
-          </ion-select>
+          </ion-select -->
         </ion-item>
         <ion-item matTooltip="{{'Select picture size' | translate}}">
           <ion-label position="stacked">{{'Select picture size' | translate }}</ion-label>
