--- a/src/app/protected/cranix/devices/add-printer/add-printer.component.html
+++ b/src/app/protected/cranix/devices/add-printer/add-printer.component.html
@@ -1,15 +1,17 @@
-<form #addPrinterFrom="ngForm" (ngSubmit)="onSubmit(addPrinterFrom.value)">
+<form #addPrinterFrom="ngForm" (ngSubmit)="onSubmit()">
   <ion-header translucent>
     <ion-toolbar>
-      <ion-title *ngIf="action=='add'">{{  'Add printer' | translate }}</ion-title>
-      <ion-title *ngIf="action=='queue'">{{  'Add printer queue' | translate }}</ion-title>
-      <ion-title *ngIf="action=='modify'">{{  'Modify printer' | translate }}</ion-title>
+      <ion-title *ngIf="action=='add'">{{ 'Add printer' | translate }}</ion-title>
+      <ion-title *ngIf="action=='queue'">{{ 'Add printer queue' | translate }}</ion-title>
+      <ion-title *ngIf="action=='modify'">{{ 'Modify printer' | translate }}</ion-title>
       <ion-buttons slot="end">
-        <ion-button type="submit" class="ion-no-margin" [disabled]="!addPrinterFrom.form.valid || (!printer.driverFile && !printer.model ) || submitted ">
-          <ion-icon slot="icon-only" color="success" name="checkmark-sharp" >
+        <ion-button type="submit" class="ion-no-margin"
+          [disabled]="!addPrinterFrom.form.valid || (!printer.driverFile && !printer.model ) || submitted ">
+          <ion-icon slot="icon-only" color="success" name="checkmark-sharp">
           </ion-icon>
         </ion-button>
-        <ion-button *ngIf="action=='modify'" fill="clear" size="small" [disabled]="submitted" (click)="objectService.deleteObjectDialog(printer,'printer','')">
+        <ion-button *ngIf="action=='modify'" fill="clear" size="small" [disabled]="submitted"
+          (click)="objectService.deleteObjectDialog(printer,'printer','')">
           <ion-icon slot="icon-only" color="danger" name="trash"></ion-icon>
         </ion-button>
         <ion-button fill="clear" size="small" (click)="modalCtrl.dismiss()" [disabled]="submitted">
@@ -30,8 +32,8 @@
       </ion-item>
       <ion-item *ngIf="action == 'queue'">
         <ion-label position="stacked">{{'device'| translate}}</ion-label>
-        <ion-select type="text" [(ngModel)]="printer.deviceId" name="deviceId"
-          required [compareWith]="objectService.compareFn" [disabled]="submitted">
+        <ion-select type="text" [(ngModel)]="printer.deviceId" name="deviceId" required
+          [compareWith]="objectService.compareFn" [disabled]="submitted">
           <ion-select-option *ngFor="let device of printerDevices" value="{{device.id}}">{{device.name}}
           </ion-select-option>
         </ion-select>
@@ -48,26 +50,57 @@
           [disabled]="(!printer.deviceId && !room ) || submitted || action == 'modify'">
         </ion-input>
       </ion-item>
-      <ion-item *ngIf="action == 'add'">
+      <ion-item *ngIf="action != 'queue'">
         <ion-label position="stacked">{{'mac'|translate}}</ion-label>
-        <ion-input type="text" [(ngModel)]="printer.mac" name="mac" required [disabled]="(!printer.deviceId && !room ) || submitted"></ion-input>
+        <ion-input type="text" [(ngModel)]="printer.mac" name="mac" required [disabled]="submitted"
+        pattern="^([0-9A-Fa-f]{2}[:-]){5}([0-9A-Fa-f]{2})$"></ion-input>
       </ion-item>
       <ion-item>
         <ion-label position="stacked">{{'manufacturer'| translate}}</ion-label>
-        <ion-select type="text" [(ngModel)]="printer.manufacturer" name="manufacturer" [disabled]="submitted"  (ngModelChange)="manufacturerChanged($event)">
-          <ion-select-option *ngFor="let man of  manufacturers" value="{{man}}">{{man}}</ion-select-option>
-        </ion-select>
+        <ionic-selectable #manufacturerSelect [(ngModel)]="manufacturer" [items]="manufacturers"
+          [ngModelOptions]="{standalone: true}" itemValueField="key" itemTextField="label" [canSearch]="true">
+          <ng-template ionicSelectableHeaderTemplate>
+            <ion-toolbar>
+              <ion-title>
+                {{ "Select a manufacturer" | translate }}
+              </ion-title>
+              <ion-buttons slot="end">
+                <ion-button ion-button (click)="manufacturerSelect.close()">
+                  <ion-icon color="danger" name="close"></ion-icon>
+                </ion-button>
+              </ion-buttons>
+            </ion-toolbar>
+          </ng-template>
+          <ng-template ionicSelectableItemIconTemplate>
+            <div></div>
+          </ng-template>
+        </ionic-selectable>
       </ion-item>
       <ion-item>
         <ion-label position="stacked">{{'model'| translate}}</ion-label>
-        <ion-select type="text" [(ngModel)]="printer.model" name="model"  [disabled]="submitted" placeholder="{{printer.model}}">
-          <ion-select-option *ngFor="let mod of models[printer.manufacturer]" value="{{mod}}">{{mod}}
-          </ion-select-option>
-        </ion-select>
+        <ionic-selectable #modelSelect [(ngModel)]="model" [items]="models[manufacturer.key]"
+          [ngModelOptions]="{standalone: true}" itemValueField="key" itemTextField="label" [canSearch]="true"
+          (onSelect)="setModel($event)">
+          <ng-template ionicSelectableHeaderTemplate>
+            <ion-toolbar>
+              <ion-title>
+                {{ "Select a model" | translate }}
+              </ion-title>
+              <ion-buttons slot="end">
+                <ion-button ion-button (click)="modelSelect.close()">
+                  <ion-icon color="danger" name="close"></ion-icon>
+                </ion-button>
+              </ion-buttons>
+            </ion-toolbar>
+          </ng-template>
+          <ng-template ionicSelectableItemIconTemplate>
+            <div></div>
+          </ng-template>
+        </ionic-selectable>
       </ion-item>
       <ion-item>
         <ion-label position="stacked">{{ driverFile | translate }}</ion-label>
-        <input type="file" id="printerDriverFile" (change)="handleFileInput($event)"  [disabled]="submitted">
+        <input type="file" id="printerDriverFile" (change)="handleFileInput($event)" [disabled]="submitted">
       </ion-item>
       <ion-item *ngIf="action == 'add'">
         <ion-label position="stacked">{{'serial'|translate}}</ion-label>
@@ -75,7 +108,8 @@
       </ion-item>
       <ion-item *ngIf="action == 'add'">
         <ion-label position="stacked">{{'inventary'|translate}}</ion-label>
-        <ion-input type="text" [(ngModel)]="printer.inventary" name="inventary" [disabled]="!room || submitted"></ion-input>
+        <ion-input type="text" [(ngModel)]="printer.inventary" name="inventary" [disabled]="!room || submitted">
+        </ion-input>
       </ion-item>
     </ion-list>
   </ion-content>
