--- a/src/app/protected/cephalix/institutes/lists/institutes-sync-objects.component.html
+++ b/src/app/protected/cephalix/institutes/lists/institutes-sync-objects.component.html
@@ -1,34 +1,18 @@
 <cranix-toolbar></cranix-toolbar>
-<ion-content id="carded">
-  <ion-row class="header-row">
-    <ion-col size=6>
-      <ion-title>{{'Define synchronisation of objects for the selected institutes' | translate}}</ion-title>
-    </ion-col>
-    <ion-col *ngIf="cephalixService.selectedInstitutes.length == 0" size=12>
-      <ion-label color="danger">{{'You have to select some institutes to be able to use this site.'}}</ion-label>
-    </ion-col>
-  </ion-row>
-  <ion-fab vertical="top" horizontal="end" slot="fixed" class="hidden-lg hidden-xl">
-    <ion-fab-button>
-      <ion-icon name="arrow-forward-circle"></ion-icon>
-    </ion-fab-button>
-    <ion-fab-list side="start">
-      <ion-fab-button>
-        <ion-icon name="code-working" color="success" (click)="startSync($event)"></ion-icon>
-      </ion-fab-button>
-      <ion-fab-button>
-        <ion-icon name="code-working" color="danger" (click)="stopSync($event)"></ion-icon>
-      </ion-fab-button>
-    </ion-fab-list>
-  </ion-fab>
-  <ion-searchbar placeholder="{{'search' | translate }}" (input)="onMemberFilterChanged()" id="quickFilter"
-    showCancelButton="never" class="hidden-lg hidden-xl"></ion-searchbar>
+<ion-content>
   <ion-card>
     <ion-card-header class="hidden-xs hidden-sm hidden-md">
       <ion-card-title matTooltip="{{ cephalixService.selectedList }}">
-        {{'Define synchronisation of objects for the selected institutes' | translate}}</ion-card-title>
+        {{'Define synchronisation of objects for the selected institutes' | translate}}
+      </ion-card-title>
       <ion-card-subtitle *ngIf="cephalixService.selectedInstitutes.length == 0">
-        {{'You have to select some institutes to be able to use this site.'}}</ion-card-subtitle>
+        {{'You have to select some institutes to be able to use this site.'}}
+      </ion-card-subtitle>
+      <ion-segment (ionChange)="segmentChanged($event)" color="secondary" value="User">
+        <ion-segment-button *ngFor="let seg of objectsToSync" [value]="seg">
+          <ion-label>{{ seg | translate}}</ion-label>
+        </ion-segment-button>
+      </ion-segment>
       <ion-toolbar *ngIf="cephalixService.selectedInstitutes.length != 0">
         <ion-item>
           <ion-input placeholder="{{'search' | translate }}" (input)="onMemberFilterChanged()" id="memberFilter">
@@ -44,13 +28,20 @@
             <ion-icon slot="icon-only" color="danger" name="code-working"></ion-icon>
           </ion-button>
         </ion-buttons>
-      </ion-toolbar>
+      </ion-toolbar>   
     </ion-card-header>
-    <ion-card-content *ngIf="cephalixService.selectedInstitutes.length != 0">
-      <ag-grid-angular #agGrid id="institutesSyncObjectsTable" style="width: 100%; height: 100%;"
-        class="{{authService.settings.agGridThema}}" rowHeight="{{authService.settings.rowHeight}}" [modules]="modules"
-        [rowData]="memberData" [columnDefs]="columnDefs" [autoGroupColumnDef]="autoGroupColumnDef" [context]="context"
-        rowSelection="multiple" [rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick"
+    <ion-card-content>
+      <ag-grid-angular
+        #agGrid
+        id="institutesSyncObjectsTable"
+        style="width: 100%; height: 600px;"
+        class="{{authService.settings.agGridThema}}"
+        rowHeight="{{authService.settings.rowHeight}}"
+        [rowData]="memberData[segment]"
+        [columnDefs]="columnDefs"
+        [context]="context"
+        rowSelection="multiple"
+        [rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick"
         (gridReady)="onMemberReady($event)">
       </ag-grid-angular>
     </ion-card-content>
