Enable inserting images an links

--- a/src/app/protected/cranix/informations/add-edit-info.html
+++ b/src/app/protected/cranix/informations/add-edit-info.html
@@ -28,7 +28,7 @@
                     <ng-template ionicSelectableHeaderTemplate>
                         <ion-toolbar>
                             <ion-title>
-                                {{ "Select a Category" | translate }}
+                                {{ "Select Categories" | translate }}
                             </ion-title>
                             <ion-buttons slot="end">
                                 <ion-button ion-button (click)="ionicSelectable.close()">
@@ -49,16 +49,55 @@
                     <ion-input autoGrow="true" [(ngModel)]="info.keywords" name="keywords" required [readonly]="!owned">
                     </ion-input>
                 </ion-item>
-                <ion-item *ngIf="infoType != 'taskResponse'">
+                <ion-item *ngIf="infoType != 'taskResponse' && infoType != 'faq'">
                     <ion-label position="stacked">{{'validFrom' | translate}}</ion-label>
                     <input [(ngModel)]="info.validFrom" name="validFrom" type="datetime-local" [readonly]="!owned">
                 </ion-item>
-                <ion-item>
+                <ion-item *ngIf="infoType != 'faq'">
                     <ion-label position="stacked">{{'validUntil' | translate}}</ion-label>
                     <input [(ngModel)]="info.validUntil" name="validUntil" type="datetime-local" [readonly]="!owned">
                 </ion-item>
                 <quill-editor *ngIf="owned || infoType == 'taskResponse'; else elseBlock" [styles]="{height: '450px'}"
-                    [(ngModel)]="info.text" name="text">
+                    [(ngModel)]="info.text" [ngModelOptions]="{standalone: true}">
+                    <div quill-editor-toolbar>
+                        <span class="ql-formats">
+                            <select class="ql-font">
+                                <option selected></option>
+                                <option value="serif"></option>
+                                <option value="monospace"></option>
+                            </select>
+                            <select class="ql-size">
+                                <option value="small"></option>
+                                <option selected></option>
+                                <option value="large"></option>
+                                <option value="huge"></option>
+                            </select>
+                        </span>
+                        <span class="ql-formats">
+                            <button class="ql-bold"></button>
+                            <button class="ql-italic"></button>
+                            <button class="ql-underline"></button>
+                            <button class="ql-strike"></button>
+                        </span>
+                        <span class="ql-formats">
+                            <select class="ql-color"></select>
+                            <select class="ql-background"></select>
+                        </span>
+                        <span class="ql-formats">
+                            <button class="ql-list" value="ordered"></button>
+                            <button class="ql-list" value="bullet"></button>
+                            <select class="ql-align">
+                                <option selected></option>
+                                <option value="center"></option>
+                                <option value="right"></option>
+                                <option value="justify"></option>
+                            </select>
+                        </span>
+                        <span class="ql-formats">
+                            <button class="ql-link"></button>
+                            <button class="ql-image"></button>
+                        </span>
+                    </div>
                 </quill-editor>
                 <ng-template #elseBlock>
                     <quill-view-html #elseBlock [content]="info.text" format="text" theme="snow"></quill-view-html>
