--- a/src/app/protected/cranix/informations/informations.component.html
+++ b/src/app/protected/cranix/informations/informations.component.html
@@ -61,9 +61,8 @@
           <h2>{{info.title}} {{info.issue}}</h2>
           <h3>{{info.name}} {{info.phone}} {{info.email}}</h3>
         </ion-label>
-        <ion-toolbar *ngIf="segment != 'contact'">
-          {{info.title}}<br>
-          {{ 'validUntil' | translate }} {{ info.validUntil | date:'yyyy-MM-dd HH:mm' }}
+        <ion-toolbar>
+          <span *ngIf='info.validUntil'>{{ info.validUntil | date:'yyyy-MM-dd HH:mm' }} </span>{{info.title}}
           <ion-buttons slot="end">
             <ion-button *ngIf="segment == 'task' && owned" (click)="openResponses(info)">
               <ion-icon slot="icon-only" name="albums"></ion-icon>
@@ -78,6 +77,9 @@
                 <ion-icon *ngIf="!owned" slot="icon-only" name="book"></ion-icon>
                 <ion-icon *ngIf="owned" slot="icon-only" name="build"></ion-icon>
               </ng-template>
+            </ion-button>
+            <ion-button *ngIf="owned" (click)="deleteInfo(info)">
+              <ion-icon slot="icon-only" name="trash" color="danger"></ion-icon>
             </ion-button>
           </ion-buttons>
         </ion-toolbar>
