--- a/src/app/protected/cranix/hwconfs/details/members/hwconf-members.page.html
+++ b/src/app/protected/cranix/hwconfs/details/members/hwconf-members.page.html
@@ -1,71 +1,123 @@
 <cranix-toolbar></cranix-toolbar>
-<ion-content id="carded">
-<ion-row class="header-row">
-  <ion-col>
-    <ion-title>{{ 'Members of the selected hwconf:' | translate}} "{{hwconf.name}}" {{hwconf.description}}
-      {{hwconf.deviceType | translate}}
-    </ion-title>
-  </ion-col>
-</ion-row>
-<ion-fab vertical="top" horizontal="end" slot="fixed" class="hidden-lg hidden-xl">
-  <ion-fab-button>
-    <ion-icon name="arrow-forward-circle"></ion-icon>
-  </ion-fab-button>
-  <ion-fab-list side="start">
-    <ion-fab-button (click)="triggerClone($event,'startmulticastclone')">
-      <ion-icon name="logo-buffer" color="success"></ion-icon>
+<ion-content id="carded" *ngIf="!sendingImage">
+  <ion-row class="header-row">
+    <ion-col>
+      <ion-title>{{ 'Members of the selected hwconf:' | translate}} "{{hwconf.name}}" {{hwconf.description}}
+        {{hwconf.deviceType | translate}}
+      </ion-title>
+    </ion-col>
+  </ion-row>
+  <ion-fab vertical="top" horizontal="end" slot="fixed" class="hidden-lg hidden-xl">
+    <ion-fab-button>
+      <ion-icon name="arrow-forward-circle"></ion-icon>
     </ion-fab-button>
-    <ion-fab-button (click)="triggerClone($event,'stopclone')">
-      <ion-icon name="logo-buffer" color="danger"></ion-icon>
-    </ion-fab-button>
-  </ion-fab-list>
-</ion-fab>
-<ion-searchbar placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged('hwconfMembersFilterMD')"
-  id="hwconfMembersFilterMD" showCancelButton="never" class="hidden-lg hidden-xl"></ion-searchbar>
-<ion-content (window:resize)="onResize($event)">
-  <ion-card>
-    <ion-card-header>
-      <ion-toolbar>
-        <ion-card-title>{{ 'Members of the selected hwconf:' | translate}} "{{hwconf.name}}" {{hwconf.description}}
-          {{hwconf.deviceType | translate}}
-        </ion-card-title>
-        <ion-item>
-          <ion-input placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged('hwconfMembersFilter')" id="hwconfMembersFilter">
-          </ion-input>
-        </ion-item>
-        <ion-buttons slot="end">
-          <!-- ion-button size="small" fill="solid" (click)="createColumnDef()"
+    <ion-fab-list side="start">
+      <ion-fab-button (click)="triggerClone($event,'startmulticastclone')">
+        <ion-icon name="logo-buffer" color="success"></ion-icon>
+      </ion-fab-button>
+      <ion-fab-button (click)="triggerClone($event,'stopclone')">
+        <ion-icon name="logo-buffer" color="danger"></ion-icon>
+      </ion-fab-button>
+    </ion-fab-list>
+  </ion-fab>
+  <ion-searchbar placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged('hwconfMembersFilterMD')"
+    id="hwconfMembersFilterMD" showCancelButton="never" class="hidden-lg hidden-xl"></ion-searchbar>
+  <ion-content (window:resize)="onResize($event)">
+    <ion-card>
+      <ion-card-header>
+        <ion-toolbar>
+          <ion-card-title>{{ 'Members of the selected hwconf:' | translate}} "{{hwconf.name}}" {{hwconf.description}}
+            {{hwconf.deviceType | translate}}
+          </ion-card-title>
+          <ion-item>
+            <ion-input placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged('hwconfMembersFilter')"
+              id="hwconfMembersFilter">
+            </ion-input>
+          </ion-item>
+          <ion-buttons slot="end">
+            <!-- ion-button size="small" fill="solid" (click)="createColumnDef()"
             matTooltip="{{'Change grouping of the table' | translate }}">
             <ion-icon slot="icon-only" name="list-sharp"></ion-icon>
           </ion-button -->
-          <ion-button size="small" fill="solid" (click)="triggerClone($event,'startmulticastclone')"
-            matTooltip="{{'Start multicast cloning' | translate }}">
-            <ion-icon slot="icon-only" name="logo-buffer" color="success"></ion-icon>
-          </ion-button>
-          <ion-button size="small" fill="solid" (click)="triggerClone($event,'stopclone')"
+            <ion-button size="small" fill="solid" (click)="triggerClone($event,'startmulticastclone')"
+              matTooltip="{{'Start multicast cloning' | translate }}">
+              <ion-icon slot="icon-only" name="logo-buffer" color="success"></ion-icon>
+            </ion-button>
+            <ion-button size="small" fill="solid" (click)="startSending()"
+              matTooltip="{{'Start sending image' | translate }}">
+              <ion-icon slot="icon-only" name="send" color="success"></ion-icon>
+            </ion-button>
+            <ion-button size="small" fill="solid" (click)="triggerClone($event,'stopclone')"
+              matTooltip="{{'Stop multicast cloning' | translate }}">
+              <ion-icon slot="icon-only" name="logo-buffer" color="danger"></ion-icon>
+            </ion-button>
+          </ion-buttons>
+        </ion-toolbar>
+      </ion-card-header>
+      <ion-card-content>
+        <ag-grid-angular style="width: 100%; height:  100%;" rowSelection="multiple"
+          class="{{authService.settings.agGridThema}}" rowHeight="{{authService.settings.rowHeight}}"
+          rowMultiSelectWithClick="{{authService.settings.rowMultiSelectWithClick}}" [context]="context"
+          [columnDefs]="columnDefs" [defaultColDef]="defaultColDef" [rowData]="memberData"
+          [autoGroupColumnDef]="autoGroupColumnDef" [groupSelectsChildren]="true" [animateRows]="true" id="memberTable"
+          (gridReady)="onMemberReady($event)">
+        </ag-grid-angular>
+      </ion-card-content>
+    </ion-card>
+  </ion-content>
+</ion-content>
+<ion-content *ngIf="sendingImage">
+  <ion-card>
+    <ion-card-header>
+      <ion-toolbar>
+        <ion-card-title>{{'Multicast cloning of'|translate}}: {{ hwconf.name }}</ion-card-title>
+        <ion-item>
+          <ion-label>{{'Select network card'|translate}}:</ion-label>
+          <ion-select [(ngModel)]="networkCard" name="networkCard">
+            <ion-select-option *ngFor="let card of networkCards" [value]="card">{{card}}</ion-select-option>
+          </ion-select>
+        </ion-item>
+        <ion-buttons slot="end">
+          <ion-button size="small" fill="clear" (click)="triggerClone($event,'stopclone')"
             matTooltip="{{'Stop multicast cloning' | translate }}">
-            <ion-icon slot="icon-only" name="logo-buffer" color="danger"></ion-icon>
+            <ion-icon slot="icon-only" name="close" color="danger"></ion-icon>
           </ion-button>
         </ion-buttons>
       </ion-toolbar>
     </ion-card-header>
     <ion-card-content>
-      <ag-grid-angular
-      style="width: 100%; height:  100%;"
-      rowSelection="multiple"
-      class="{{authService.settings.agGridThema}}"
-      rowHeight="{{authService.settings.rowHeight}}"
-      rowMultiSelectWithClick="{{authService.settings.rowMultiSelectWithClick}}"
-      [context]="context"
-      [columnDefs]="columnDefs"
-      [defaultColDef]="defaultColDef"
-      [rowData]="memberData"
-      [autoGroupColumnDef]="autoGroupColumnDef"
-      [groupSelectsChildren]="true"
-      [animateRows]="true"
-      id="memberTable"
-      (gridReady)="onMemberReady($event)">
-      </ag-grid-angular>
+      <ion-grid>
+        <ion-row>
+          <ion-col>
+            <ion-label>{{'name'|translate}}</ion-label>
+          </ion-col>
+          <ion-col>
+            <ion-label>{{'description'|translate}}</ion-label>
+          </ion-col>
+          <ion-col>
+            <ion-label>{{ 'Status' | translate }}</ion-label>
+          </ion-col>
+          <ion-col>
+            <ion-label>{{'Start sendig'|translate}}</ion-label>
+          </ion-col>
+        </ion-row>
+        <ion-row *ngFor="let partition of hwconf.partitions">
+          <ion-col>
+            <ion-label>{{partition.name}}</ion-label>
+          </ion-col>
+          <ion-col>
+            <ion-label>{{partition.description}}</ion-label>
+          </ion-col>
+          <ion-col>
+            <ion-label *ngIf="sentImage == partition.id">{{ 'Image sending' | translate }}</ion-label>
+          </ion-col>
+          <ion-col>
+            <ion-button size="small" fill="clear" (click)="sendImage(partition.id)">
+              <ion-icon slot="icon-only" name="send" color="success"></ion-icon>
+            </ion-button>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
     </ion-card-content>
   </ion-card>
 </ion-content>
