--- a/src/app/protected/cranix/softwares/status/software-status.component.html
+++ b/src/app/protected/cranix/softwares/status/software-status.component.html
@@ -27,10 +27,10 @@
           </ion-input>
         </ion-item>
         <ion-buttons slot="end">
-          <ion-button size="small" fill="solid" (click)="toggleColumnDef()"
+          <!-- ion-button size="small" fill="solid" (click)="toggleColumnDef()"
             matTooltip="{{'Change grouping of the table' | translate }}">
             <ion-icon slot="icon-only" name="list-sharp"></ion-icon>
-          </ion-button>
+          </ion-button -->
           <ion-button size="small" fill="solid" (click)="exportSelected()"
             matTooltip="{{'Export selected objects'|translate}}">
             <ion-icon slot="icon-only" name="download"></ion-icon>
