--- a/src/app/protected/cranix/hwconfs/details/hwconf-details.page.html
+++ b/src/app/protected/cranix/hwconfs/details/hwconf-details.page.html
@@ -13,8 +13,8 @@
       </ion-tab-button>
   
       <ion-tab-button tab="members">
-        <ion-icon name="people"></ion-icon>
-        <ion-label>{{ 'members' | translate}}</ion-label>
+        <ion-icon name="logo-buffer"></ion-icon>
+        <ion-label>{{ 'Mulitcast Cloning' | translate}}</ion-label>
       </ion-tab-button>
     </ion-tab-bar>
   </ion-tabs>
