--- a/src/app/protected/cranix/hwconfs/details/members/hwconf-members.page.html
+++ b/src/app/protected/cranix/hwconfs/details/members/hwconf-members.page.html
@@ -1,70 +1,54 @@
 <cranix-toolbar></cranix-toolbar>
-<ion-content id="carded" *ngIf="!sendingImage">
-  <ion-row class="header-row">
-    <ion-col>
-      <ion-title>{{ 'Members of the selected hwconf:' | translate}} "{{hwconf.name}}" {{hwconf.description}}
-        {{hwconf.deviceType | translate}}
-      </ion-title>
-    </ion-col>
-  </ion-row>
-  <ion-fab vertical="top" horizontal="end" slot="fixed" class="hidden-lg hidden-xl">
-    <ion-fab-button>
-      <ion-icon name="arrow-forward-circle"></ion-icon>
-    </ion-fab-button>
-    <ion-fab-list side="start">
-      <ion-fab-button (click)="triggerClone($event,'startmulticastclone')">
-        <ion-icon name="logo-buffer" color="success"></ion-icon>
-      </ion-fab-button>
-      <ion-fab-button (click)="triggerClone($event,'stopclone')">
-        <ion-icon name="logo-buffer" color="danger"></ion-icon>
-      </ion-fab-button>
-    </ion-fab-list>
-  </ion-fab>
-  <ion-searchbar placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged('hwconfMembersFilterMD')"
-    id="hwconfMembersFilterMD" showCancelButton="never" class="hidden-lg hidden-xl"></ion-searchbar>
-  <ion-content (window:resize)="onResize($event)">
-    <ion-card>
-      <ion-card-header>
-        <ion-toolbar>
-          <ion-card-title>{{ 'Members of the selected hwconf:' | translate}} "{{hwconf.name}}" {{hwconf.description}}
-            {{hwconf.deviceType | translate}}
-          </ion-card-title>
-          <ion-item>
-            <ion-input placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged('hwconfMembersFilter')"
-              id="hwconfMembersFilter">
-            </ion-input>
-          </ion-item>
-          <ion-buttons slot="end">
-            <!-- ion-button size="small" fill="solid" (click)="createColumnDef()"
-            matTooltip="{{'Change grouping of the table' | translate }}">
-            <ion-icon slot="icon-only" name="list-sharp"></ion-icon>
-          </ion-button -->
-            <ion-button size="small" fill="solid" (click)="triggerClone($event,'startmulticastclone')"
-              matTooltip="{{'Start multicast cloning' | translate }}">
-              <ion-icon slot="icon-only" name="logo-buffer" color="success"></ion-icon>
-            </ion-button>
-            <ion-button size="small" fill="solid" (click)="startSending()"
-              matTooltip="{{'Start sending image' | translate }}">
-              <ion-icon slot="icon-only" name="send" color="success"></ion-icon>
-            </ion-button>
-            <ion-button size="small" fill="solid" (click)="triggerClone($event,'stopclone')"
-              matTooltip="{{'Stop multicast cloning' | translate }}">
-              <ion-icon slot="icon-only" name="logo-buffer" color="danger"></ion-icon>
-            </ion-button>
-          </ion-buttons>
-        </ion-toolbar>
-      </ion-card-header>
-      <ion-card-content>
-        <ag-grid-angular style="width: 100%; height:  100%;" rowSelection="multiple"
-          class="{{authService.settings.agGridThema}}" rowHeight="{{authService.settings.rowHeight}}"
-          rowMultiSelectWithClick="{{authService.settings.rowMultiSelectWithClick}}" [context]="context"
-          [columnDefs]="columnDefs" [defaultColDef]="defaultColDef" [rowData]="memberData"
-          [autoGroupColumnDef]="autoGroupColumnDef" [groupSelectsChildren]="true" [animateRows]="true" id="memberTable"
-          (gridReady)="onMemberReady($event)">
-        </ag-grid-angular>
-      </ion-card-content>
-    </ion-card>
-  </ion-content>
+<ion-content *ngIf="!sendingImage">
+  <ion-card>
+    <ion-card-header>
+      <ion-toolbar>
+        <ion-card-title>{{ 'Multicast Cloning of' | translate}}: "{{hwconf.name}}" {{hwconf.description}}
+          {{hwconf.deviceType | translate}}
+        </ion-card-title>
+        <ion-row>
+          <ion-col>
+            <ion-item>
+              <ion-input placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged('hwconfMembersFilter')"
+                id="hwconfMembersFilter">
+              </ion-input>
+            </ion-item>
+          </ion-col>
+          <ion-col>
+            <ion-item>
+              <ion-label position="stacked">{{'Rooms'|translate}}</ion-label>
+              <ionic-selectable #roomSelect [(ngModel)]="selectedRooms" [ngModelOptions]="{standalone: true}"
+                [items]="rooms" itemValueField="id" itemTextField="name" [canSearch]="true" [isMultiple]="true"
+                placeholder="Select Rooms" (onChange)="readFilteredMember()">
+              </ionic-selectable>
+            </ion-item>
+          </ion-col>
+        </ion-row>
+        <ion-buttons slot="end">
+          <ion-button size="small" fill="solid" (click)="triggerClone($event,'startmulticastclone')"
+            matTooltip="{{'Start multicast cloning' | translate }}">
+            <ion-icon slot="icon-only" name="logo-buffer" color="success"></ion-icon>
+          </ion-button>
+          <ion-button size="small" fill="solid" (click)="startSending()"
+            matTooltip="{{'Start sending image' | translate }}">
+            <ion-icon slot="icon-only" name="send" color="success"></ion-icon>
+          </ion-button>
+          <ion-button size="small" fill="solid" (click)="triggerClone($event,'stopclone')"
+            matTooltip="{{'Stop multicast cloning' | translate }}">
+            <ion-icon slot="icon-only" name="logo-buffer" color="danger"></ion-icon>
+          </ion-button>
+        </ion-buttons>
+      </ion-toolbar>
+    </ion-card-header>
+    <ion-card-content>
+      <ag-grid-angular style="width: 100%; height:  600px;" rowSelection="multiple"
+        class="{{authService.settings.agGridThema}}" rowHeight="{{authService.settings.rowHeight}}"
+        rowMultiSelectWithClick="{{authService.settings.rowMultiSelectWithClick}}" [context]="context"
+        [columnDefs]="columnDefs" [defaultColDef]="defaultColDef" [rowData]="memberData" [animateRows]="true"
+        id="memberTable" (gridReady)="onMemberReady($event)">
+      </ag-grid-angular>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
 <ion-content *ngIf="sendingImage">
   <ion-card>
@@ -88,6 +72,13 @@
     <ion-card-content>
       <ion-grid>
         <ion-row>
+          <ion-col size="12">
+            {{'The boot files for the selected devices was written.'| translate}}
+            {{'Start the devices and wait until they start in the CloneTool.'| translate }}
+            {{'When all devices are waiting for the image you have to start to send the corresponding one.'| translate }}
+          </ion-col>
+        </ion-row>
+        <ion-row>
           <ion-col>
             <ion-label>{{'name'|translate}}</ion-label>
           </ion-col>
@@ -101,7 +92,8 @@
             <ion-label>{{'Start sendig'|translate}}</ion-label>
           </ion-col>
         </ion-row>
-        <ion-row *ngFor="let partition of hwconf.partitions" [ngStyle]="{'color':sentImage == partition.id  ? '#eb445a' :''}">
+        <ion-row *ngFor="let partition of hwconf.partitions"
+          [ngStyle]="{'color':sentImage == partition.id  ? '#eb445a' :''}">
           <ion-col>
             <ion-label>{{partition.name}}</ion-label>
           </ion-col>
@@ -112,7 +104,8 @@
             <ion-label *ngIf="sentImage == partition.id">{{ 'Image sending' | translate }}</ion-label>
           </ion-col>
           <ion-col>
-            <ion-button size="small" fill="clear" (click)="sendImage(partition.id)" [disabled]="!networkCard || sentImage != 0">
+            <ion-button size="small" fill="clear" (click)="sendImage(partition.id)"
+              [disabled]="!networkCard || sentImage != 0">
               <ion-icon slot="icon-only" name="send" color="success"></ion-icon>
             </ion-button>
           </ion-col>
