big-modal for text editor

--- a/src/global.scss
+++ b/src/global.scss
@@ -58,6 +58,10 @@
     --height: 85%;
     --width : 500px;
   }
+  .big-modal .modal-wrapper {
+    --height: 85%;
+    --width : 80%;
+  }
   .medium-modal .modal-wrapper {
     --height: 85%;
     --width : 500px;
