Get rid of grouping

--- a/src/app/protected/cranix/softwares/status/software-status.component.html
+++ b/src/app/protected/cranix/softwares/status/software-status.component.html
@@ -3,7 +3,7 @@
   <ion-card>
     <ion-card-header>
       <ion-toolbar>
-        <ion-card-title>{{ 'Software installation status:' | translate}} {{grouping | translate}}</ion-card-title>
+        <ion-card-title>{{ 'Software installation status:' | translate}}</ion-card-title>
         <ion-item>
           <ion-input placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged('memberFilter')"
             id="memberFilter">
