--- a/src/app/shared/actions/setpassword/setpassword.component.html
+++ b/src/app/shared/actions/setpassword/setpassword.component.html
@@ -21,7 +21,7 @@
       </ion-input>
     </ion-item>
     <ion-item>
-      <ion-label position="stacked">{{'New password'| translate}}</ion-label>
+      <ion-label position="stacked">{{'Repeat new password'| translate}}</ion-label>
       <ion-input type="password" [(ngModel)]="setPassword.password2" name="password2" required>
       </ion-input>
     </ion-item>
