--- a/src/app/protected/cranix/groups/groups.page.html
+++ b/src/app/protected/cranix/groups/groups.page.html
@@ -49,10 +49,17 @@
       </ion-toolbar>
     </ion-card-header>
     <ion-card-content>
-      <ag-grid-angular style="width: 100%; height: 100%;" rowSelection="multiple"
-        class="{{authService.settings.agGridThema}}" rowHeight="{{authService.settings.rowHeight}}"
-        rowMultiSelectWithClick="{{authService.settings.rowMultiSelectWithClick}}" [context]="context"
-        [rowData]="rowData" [columnDefs]="columnDefs" (gridReady)="onGridReady($event)" id="agGridTable">
+      <ag-grid-angular
+        style="width: 100%; height: 100%;"
+        rowSelection="multiple"
+        class="{{authService.settings.agGridThema}}"
+        rowHeight="{{authService.settings.rowHeight}}"
+        rowMultiSelectWithClick="{{authService.settings.rowMultiSelectWithClick}}"
+        [context]="context"
+        [rowData]="rowData"
+        [columnDefs]="columnDefs"
+        (gridReady)="onGridReady($event)"
+        id="groupsPageTable">
       </ag-grid-angular>
     </ion-card-content>
   </ion-card>
