--- a/src/app/protected/cephalix/institutes/lists/institutes.component.html
+++ b/src/app/protected/cephalix/institutes/lists/institutes.component.html
@@ -28,6 +28,9 @@
       <ion-toolbar>
         <ion-card-title>{{'Manage institutes' | translate}}</ion-card-title>
         <ion-item>
+          <ion-label *ngIf="gridApi">
+            #{{gridApi.getDisplayedRowCount()}}
+          </ion-label>
           <ion-input placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged('institutesFilter')"
             id="institutesFilter">
           </ion-input>
@@ -51,8 +54,7 @@
     <ion-card-content>
       <ag-grid-angular id="agGridTable" style="width: 100%; height: 100%;" rowSelection="multiple"
         class="{{authService.settings.agGridThema}}" rowHeight="{{authService.settings.rowHeight}}" [context]="context"
-        [rowData]="rowData" [columnDefs]="columnDefs"
-        [defaultColDef]="defaultColDef"
+        [rowData]="rowData" [columnDefs]="columnDefs" [defaultColDef]="defaultColDef"
         [rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick"
         (selectionChanged)="onSelectionChanged()" (gridReady)="onGridReady($event)">
       </ag-grid-angular>
