--- a/src/app/protected/cranix/devices/lists/devices.component.html
+++ b/src/app/protected/cranix/devices/lists/devices.component.html
@@ -32,6 +32,9 @@
         <ion-card-title *ngIf="selectedRoom">{{'Manage devices in selected room:' | translate}} {{selectedRoom.name}}
         </ion-card-title>
         <ion-item>
+          <ion-label *ngIf="gridApi">
+            #{{gridApi.getDisplayedRowCount()}}
+          </ion-label>
           <ion-input placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged('devicesFilter')"
             id="devicesFilter">
           </ion-input>
