--- a/src/app/protected/cranix/hwconfs/hwconfs.page.html
+++ b/src/app/protected/cranix/hwconfs/hwconfs.page.html
@@ -21,6 +21,9 @@
       <ion-toolbar>
         <ion-card-title>{{'Manage hwconfs' | translate}}</ion-card-title>
         <ion-item>
+          <ion-label *ngIf="gridApi">
+            #{{gridApi.getDisplayedRowCount()}}
+          </ion-label>
           <ion-input placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged('hwconfsFilter')" id="hwconfsFilter">
           </ion-input>
         </ion-item>
