--- a/src/app/protected/cranix/rooms/lists/rooms.component.html
+++ b/src/app/protected/cranix/rooms/lists/rooms.component.html
@@ -28,6 +28,9 @@
       <ion-toolbar>
         <ion-card-title>{{'Manage rooms' | translate}}</ion-card-title>
         <ion-item>
+          <ion-label *ngIf="gridApi">
+            #{{gridApi.getDisplayedRowCount()}}
+          </ion-label>
           <ion-input placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged('roomsFilter')" id="roomsFilter">
           </ion-input>
         </ion-item>
