--- a/src/app/protected/cranix/softwares/packages/software-packages.component.html
+++ b/src/app/protected/cranix/softwares/packages/software-packages.component.html
@@ -21,6 +21,9 @@
       <ion-toolbar>
         <ion-card-title>{{'Available software packages:' | translate}}</ion-card-title>
           <ion-item>
+            <ion-label *ngIf="gridApi">
+              #{{gridApi.getDisplayedRowCount()}}
+            </ion-label>
             <ion-input placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged('softwareFilter')" id="softwareFilter">
             </ion-input>
           </ion-item>
