--- a/src/app/protected/cranix/users/lists/users.component.html
+++ b/src/app/protected/cranix/users/lists/users.component.html
@@ -32,6 +32,9 @@
       <ion-toolbar>
         <ion-card-title>{{'Manage users' | translate}}</ion-card-title>
         <ion-item>
+          <ion-label *ngIf="gridApi">
+            #{{gridApi.getDisplayedRowCount()}}
+          </ion-label>
           <ion-input placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged('usersFilter')"
             id="usersFilter">
           </ion-input>
