Translation and spelling. (#53)
* Update software-licenses.component.html

* Update manage-dhcp.component.html

* Update create-support.html

* Update setpassword.component.html

* Update de.json

* Update create-support.html

* Update select-columns.component.html

* Update de.json

* Update de.json

* Update de.json

* Update select-columns.component.html

* Update software-licenses.component.html

* Update setpassword.component.html

* Update manage-dhcp.component.html

* Update create-support.html

* Update mygroups.page.ts

* Update de.json

* Update mygroups.page.html

* Update de.json

Adjust translation.

--- a/src/app/shared/actions/manage-dhcp/manage-dhcp.component.html
+++ b/src/app/shared/actions/manage-dhcp/manage-dhcp.component.html
@@ -64,7 +64,7 @@
   </ion-list>
   <ion-list>
     <ion-list-header>
-      {{ 'Exisiting DHCP Options/Statements' | translate}}
+      {{'Existing DHCP Options/Statements' | translate}}
     </ion-list-header>
     <ion-item *ngFor="let dhcp of myDHCP">
       <ion-label>
