--- a/src/app/shared/actions/setpassword/setpassword.component.html
+++ b/src/app/shared/actions/setpassword/setpassword.component.html
@@ -1,8 +1,8 @@
 <form #setPasswordForm="ngForm" (ngSubmit)="onSubmit()">
 <ion-header translucent>
   <ion-toolbar>
-    <ion-title *ngIf="!type">{{  'Set password for the selected user' | translate }}</ion-title>
-    <ion-title *ngIf="type">{{  'Reset password' | translate }}</ion-title>
+    <ion-title *ngIf="!type">{{'Set password for the selected user' | translate}}</ion-title>
+    <ion-title *ngIf="type">{{'Reset password' | translate}}</ion-title>
     <ion-buttons slot="end">
       <ion-button type="submit" class="ion-no-margin"  fill="clear" size="small" [disabled]="!setPasswordForm.valid || ( setPassword.password != setPassword.password2 )" >
         <ion-icon slot="icon-only" color="success" name="checkmark-sharp"></ion-icon>
@@ -16,17 +16,17 @@
 <ion-content fullscreen>
   <ion-list>
     <ion-item>
-      <ion-label position="stacked">{{'New password'| translate}}</ion-label>
+      <ion-label position="stacked">{{'New password' | translate}}</ion-label>
       <ion-input type="password" [(ngModel)]="setPassword.password" name="password" required>
       </ion-input>
     </ion-item>
     <ion-item>
-      <ion-label position="stacked">{{'New password'| translate}}</ion-label>
+      <ion-label position="stacked">{{'Repeat new password' | translate}}</ion-label>
       <ion-input type="password" [(ngModel)]="setPassword.password2" name="password2" required>
       </ion-input>
     </ion-item>
     <ion-item *ngIf="!type">
-      <ion-label  position="start">{{'mustChange'| translate}}</ion-label>
+      <ion-label  position="start">{{'mustChange' | translate}}</ion-label>
       <ion-checkbox position="end" checked="true" [(ngModel)]="setPassword.mustChange" name="mustChange"></ion-checkbox>
     </ion-item>
   </ion-list>
