--- a/src/app/shared/actions/setpassword/setpassword.component.html
+++ b/src/app/shared/actions/setpassword/setpassword.component.html
@@ -1,7 +1,7 @@
 <form #setPasswordForm="ngForm" (ngSubmit)="onSubmit()">
 <ion-header translucent>
   <ion-toolbar>
-    <ion-title *ngIf="!type">{{'Set password for the selected user' | translate}}</ion-title>
+    <ion-title *ngIf="!type">{{'Set password for the selected users' | translate}}</ion-title>
     <ion-title *ngIf="type">{{'Reset password' | translate}}</ion-title>
     <ion-buttons slot="end">
       <ion-button type="submit" class="ion-no-margin"  fill="clear" size="small" [disabled]="!setPasswordForm.valid || ( setPassword.password != setPassword.password2 )" >
