List all categories. Sometimes white lists should be disabled to. For example update sites.

--- a/src/app/protected/cranix/security/unbound/unbound.component.html
+++ b/src/app/protected/cranix/security/unbound/unbound.component.html
@@ -97,7 +97,7 @@
                 <ion-title>{{'Denied Categories'|translate}}</ion-title>
               </ion-item>
               <div *ngFor="let category of categories">
-                <ion-item *ngIf="category.type == 'black'">
+                <ion-item>
                   <ion-label matTooltip="{{category.description}}">{{category.desc}}</ion-label>
                   <ion-checkbox slot="end" (ionChange)="togleCategory(category.name)" [disabled]="saving"
                     [checked]="activeUnboundLists.indexOf(category.name) != -1"></ion-checkbox>
